# image_processor

./: CMakeLists.txt  README.md  bmp.cpp  bmp.h  exceptions.cpp  exceptions.h  image.cpp  image.h  image_processor.cpp
execution_control/: parser.cpp  parser.h  processor.cpp  processor.h  producer.cpp  producer.h  shared_structures.h
filters/: base.h  crop.cpp  crop.h  grayscale.cpp  grayscale.h  negative.cpp  negative.h  nostalgic.cpp  nostalgic.h
filters/matrix_filters/: edge_detection.cpp  edge_detection.h  matrix.cpp  matrix.h  sharp.cpp  sharp.h
